--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -20,3 +20,35 @@
 .popup{
     margin: auto;
 }
+
+/* .card:hover{
+    box-shadow: 2px 2px 4px 4px;
+
+} */
+
+.navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  /* Navbar links */
+  .navbar Link {
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+    .navbar Link {
+      float: none;
+      width: 100%;
+    }
+    .navbar .navbar-brand, .nav {
+      text-align: center;
+      margin: auto;
+    }
+  }
