--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .carousel-item img{
     height: 400px;
     width: 100%;
@@ -22,7 +26,7 @@
 }
 
 .card:hover{
-    box-shadow: 1px 1px 2px 2px;
+  box-shadow: 0px 0px 2px 2px black;
 }
 
 .navbar {
@@ -59,7 +63,7 @@
 }  
 
 .enrollbtn .btn:hover{
-  box-shadow: 2px 2px cornflowerblue;
+  box-shadow: 0px 0px 2px 2px cornflowerblue;
 }
 
 .coursepart{
@@ -77,18 +81,24 @@
   margin: auto;
   opacity: 0.9;
   border-radius: 38px;
+  padding: 0%;
+  
 }
 
 .navi li {
-  display: inline;
-  margin: 6%;
+  display: inline-block;
+  margin-left: 6%;
+  margin-right: 6%;
+  margin-top: 2%;
+  margin-bottom: 2%;
 }
 
 .navi li a {
   font-size: large;
+
 }
 
-@media (max-width: 768px){
+@media (max-width: 1050px){
    .navi {
     display: none;
     }
